--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,13 @@
             <version>4.11</version>
         </dependency>
     </dependencies>
-
+<distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/phusallver/mkepl_13</url>
+    </repository>
+  </distributionManagement>
     <build>
     <plugins>
         <plugin>
