--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -7,11 +7,9 @@ on:
     types:
       - opened
       - synchronize
-      - closed
 
 jobs:
   release:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
@@ -26,14 +24,18 @@ jobs:
       - name: Build with Maven
         run: mvn clean package
 
+      - name: Get merge commit SHA
+        id: get_merge_commit_sha
+        run: echo "::set-output name=merge_commit_sha::${{ github.sha }}"
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: release-${{ github.event.pull_request.number }}-${{ steps.get_merge_commit_sha.outputs.merge_commit_sha }}
+          release_name: Release ${{ github.event.pull_request.number }}
           draft: false
           prerelease: false
 
