--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,6 +2,9 @@ name: Java CI with Maven
 
 on:
   push:
+    branches:
+      - "main"
+      - "development"
   pull_request:
     branches:
       - "main"
