--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -6,12 +6,11 @@ on:
       - main
     types:
       - opened
-      - synchronize
       - closed
+      - synchronize
 
 jobs:
   release:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
@@ -32,8 +31,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ github.event.pull_request.title }}
+          release_name: Release ${{ github.event.pull_request.title }}
           draft: false
           prerelease: false
 
